force-app/main/default/objects/Planificare_Vizita__c/Planificare_Vizita__c.object-meta.xml
<CustomObject>
    <label>Planificare Vizita</label>
    <nameField>
        <label>Planificare Vizita Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planificarea Vizitelor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>