force-app/main/default/objects/Planificare_Vizita__c/fields/Nr_Clienti_Cu_Comanda__c.field-meta.xml
<CustomField>
    <fullName>Nr_Clienti_Cu_Comanda__c</fullName>
    <label>Nr Clienti Cu Comanda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>