force-app/main/default/objects/Planificare_Vizita__c/fields/Numar_Vizite_Realizate__c.field-meta.xml
<CustomField>
    <fullName>Numar_Vizite_Realizate__c</fullName>
    <label>Numar Vizite Realizate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>